--- a/README.rdoc
+++ b/README.rdoc
@@ -1,9 +1,55 @@
 = has_followers
 
-Description goes here.
+*ATTENTION:* This is a Rails 3 implementation.
+
+NOTE: It's necessary there's a *User* model. When is executing the migration this gem will create two columns in users' table: <code>followeds_count</code> and <code>followers_count</code>.
+
+== Instalation
+* The first step is add this gem to your Gemfile <code>gem 'has_followers'</code>
+* After that, install the gem in your development environment <code>bundle install</code>
+* Execute the migration generator to create tables and columns necessary <code>rails g has_followers:migration</code>
+* Run the migrations with <code>rake db:migrate</code>
+
+== Usage
+It's very simple to use this gem. See the examples below.
+
+To follow someone you need only do this
+ you.follow(someone)
+This action automatically increment your <code>followeds_count</code> column and his (someone) <code>followers_count</code> column too.
+
+Cause you want to unfollow someone, no problem. It's similar to follow someone
+ you.unfollow(someone)
+When you <code>unfollow</code> someone, this automatically decrement your <code>followeds_count</code> column and his (someone) <code>followers_count</code> column too.
+
+You can check how many users you is following
+ you.followeds_count
+
+Or how many users are following you
+ you.follwers_count
+
+If you want to know who are your followeds users
+ you.followeds
+
+And your followers
+ you.followers
+
+Check if the user is you
+ you.is?(someone) # => true if someone is you
+
+If you want to know if you is following someone
+ you.following?(someone) # => Follow object if you already following someone
+
+There's a user that you want to know whether he is following you
+ you.follow_me?(someone) # => Follow object if he is following you
+
+Or cause you want to know the user's <code>Follow</code> relationship between you and your followed or follower
+ you.following_for(someone)
+Or
+ you.followed_for(someone)
+
+The first one will finding on your followeds list, however the second one will find on your followers list.
 
 == Contributing to has_followers
- 
 * Check out the latest master to make sure the feature hasn't been implemented or the bug hasn't been fixed yet
 * Check out the issue tracker to make sure someone already hasn't requested it and/or contributed it
 * Fork the project
